--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/github.png
-/main.js
-/index.html
-/no-ref.html
-/safe-browsing.html
-/package.json
+# /github.png
+# /main.js
+# /index.html
+# /no-ref.html
+# /safe-browsing.html
+# /package.json
